style: spacing correction

--- a/index.css
+++ b/index.css
@@ -18,3 +18,10 @@ section {
     justify-content: space-evenly;
     align-items: center;
 }
+
+section .classes {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
