--- a/pseudoClasses.css
+++ b/pseudoClasses.css
@@ -1,5 +1,5 @@
 .pseudoClasses {
-  max-width: 70vw;
+  max-width: 55vw;
   border-radius: 10px;
   background-color: rgb(224, 224, 224);
   margin: 20px 40px;
@@ -22,11 +22,11 @@
 }
 
 .pseudoClasses span {
-  width: 50%;
+  width: 55%;
 }
 
 .pseudoClasses .actionArea{
-  width: 30%;
+  width: 35%;
   display: flex;
   flex-direction: column;
   background-color: white;
